assets/css/main.css
/* ... */
input[type="checkbox"]:checked+label:before,
input[type="radio"]:checked+label:before {
	background: #ffffff !important;
	border-color: #ffffff !important;
	color: #1b1f22;
	content: '\f00c';
}

input[type="checkbox"]:focus+label:before,
input[type="radio"]:focus+label:before {
	background: rgba(255, 255, 255, 0.075);
	border-color: #ffffff;
	box-shadow: 0 0 0 1px #ffffff;
}

input[type="checkbox"]+label:before {
	border-radius: 4px;
}

input[type="radio"]+label:before {
	border-radius: 100%;
}

::-webkit-input-placeholder {
	color: rgba(255, 255, 255, 0.5) !important;
	opacity: 1.0;
}

:-moz-placeholder {
	color: rgba(255, 255, 255, 0.5) !important;
	opacity: 1.0;
}

::-moz-placeholder {
	color: rgba(255, 255, 255, 0.5) !important;
	opacity: 1.0;
}

:-ms-input-placeholder {
	color: rgba(255, 255, 255, 0.5) !important;
	opacity: 1.0;
}

.formerize-placeholder {
	color: rgba(255, 255, 255, 0.5) !important;
	opacity: 1.0;
}

/* Box */

.box {
	border-radius: 4px;
	border: solid 1px #ffffff;
	margin-bottom: 2rem;
	padding: 1.5em;
}

.box> :last-child,
.box> :last-child> :last-child,
.box> :last-child> :last-child> :last-child {
	margin-bottom: 0;
}

.box.alt {
	border: 0;
	border-radius: 0;
	padding: 0;
}

/* Icon */

#main-icon {
	color: white
}

.icon {
	text-decoration: none;
	border-bottom: none;
	position: relative;
}

.icon:before {
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	display: inline-block;
	font-style: normal;
	font-variant: normal;
	text-rendering: auto;
	line-height: 1;
	text-transform: none !important;
	font-family: 'Font Awesome 5 Free';
	font-weight: 400;
}

.icon>.label {
	display: none;
}

.icon:before {
	line-height: inherit;
}

.icon.solid:before {
	font-weight: 900;
}

.icon.brands:before {
	font-family: 'Font Awesome 5 Brands';
}

/* Portfolio Grid */

.portfolio {
	display: flex;
	flex-wrap: wrap;
}

.portfolio-card {
	width: 50%;
}

.portfolio-card a {
	border-bottom: none;
}

.portfolio-card h6 {
	margin: 0px;
}

.tech-description {
	height: 0.5rem;
	font-size: .9rem;
	width: 80%;
	padding-bottom: 8%;
}

.project-description {
	height: 5em;
	font-size: .9rem;
	width: 95%;
}

/* Image */

.project-image {
	width: 70%;
}

.image {
	border-radius: 4px;
	border: 0;
	display: inline-block;
	position: relative;
}

.image:before {
	pointer-events: none;
	background-image: url("../../images/overlay.png");
	background-color: rgba(19, 21, 25, 0.5);
	border-radius: 4px;
	content: '';
	display: block;
	height: 100%;
	left: 0;
	opacity: 0.5;
	position: absolute;
	top: 0;
	width: 100%;
}

.image-bio {
	width: 30%;
	float: left;
	margin-right: 3.5%;
	border-radius: 5%;
}

.image img {
	border-radius: 4px;
	display: block;
}

.image.left,
.image.right {
	max-width: 40%;
}

.image.left img,
.image.right img {
	width: 100%;
}

.image.left {
	float: left;
	padding: 0 1.5em 1em 0;
	top: 0.25em;
}

.image.right {
	float: right;
	padding: 0 0 1em 1.5em;
	top: 0.25em;
}

.image.fit {
	display: block;
	margin: 0 0 2rem 0;
	width: 100%;
}

.image.fit img {
	width: 100%;
}

.image.main {
	display: block;
	margin: 2.5rem 0;
	width: 100%;
}

.image.main img {
	width: 100%;
}

@media screen and (max-width: 736px) {

	.image.main {
		margin: 2rem 0;
	}

	.image-bio {
		padding: 1%;
		margin-right: 3%;
		margin-left: -1%;
	}

	.tech-description {
		width: 100%;
	}

}

@media screen and (max-width: 480px) {

	.image.main {
		margin: 1.5rem 0;
	}

	.image-bio {
		width: 54%;
	}

	.portfolio-card {
		width: 100%;
	}

	.portfolio-card h6 {
		font-size: .8rem;
	}

	.project-description {
		width: 100%;
		height: auto;
		font-size: 1.2em;
		margin: 0px;
	}

	.tech-description {
		font-size: 1.2em;
		height: 3rem;
		margin: 0px;
	}

}

/* List */

ol {
	list-style: decimal;
	margin: 0 0 2rem 0;
	padding-left: 1.25em;
}

ol li {
	padding-left: 0.25em;
}

ul {
	list-style: disc;
	margin: 0 0 2rem 0;
	padding-left: 1em;
}

ul li {
	padding-left: 0.5em;
}

ul.alt {
	list-style: none;
	padding-left: 0;
}

ul.alt li {
	border-top: solid 1px #ffffff;
	padding: 0.5em 0;
}

ul.alt li:first-child {
	border-top: 0;
	padding-top: 0;
}

dl {
	margin: 0 0 2rem 0;
}

dl dt {
	display: block;
	font-weight: 600;
	margin: 0 0 1rem 0;
}

dl dd {
	margin-left: 2rem;
}

/* Actions */

ul.actions {
	display: -moz-flex;
	display: -webkit-flex;
	display: -ms-flex;
	display: flex;
	cursor: default;
	list-style: none;
	margin-left: -1rem;
	padding-left: 0;
}

ul.actions li {
	padding: 0 0 0 1rem;
	vertical-align: middle;
}

ul.actions.special {
	-moz-justify-content: center;
	-webkit-justify-content: center;
	-ms-justify-content: center;
	justify-content: center;
	width: 100%;
	margin-left: 0;
}

ul.actions.special li:first-child {
	padding-left: 0;
}

ul.actions.stacked {
	-moz-flex-direction: column;
	-webkit-flex-direction: column;
	-ms-flex-direction: column;
	flex-direction: column;
	margin-left: 0;
}

ul.actions.stacked li {
	padding: 1.3rem 0 0 0;
}

ul.actions.stacked li:first-child {
	padding-top: 0;
}

ul.actions.fit {
	width: calc(100% + 1rem);
}

ul.actions.fit li {
	-moz-flex-grow: 1;
	-webkit-flex-grow: 1;
	-ms-flex-grow: 1;
	flex-grow: 1;
	-moz-flex-shrink: 1;
	-webkit-flex-shrink: 1;
	-ms-flex-shrink: 1;
	flex-shrink: 1;
	width: 100%;
}

ul.actions.fit li>* {
	width: 100%;
}

ul.actions.fit.stacked {
	width: 100%;
}
/* ... */

